--- a/app/src/main/res/layout/activity_user_qr_activity.xml
+++ b/app/src/main/res/layout/activity_user_qr_activity.xml
@@ -6,7 +6,10 @@
     android:layout_height="match_parent"
     android:paddingRight="20dp"
     android:paddingLeft="20dp"
+
     tools:context=".ui.UserQR.UserQRActivity">
+
+
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -16,14 +19,20 @@
         app:cardElevation="4dp"
         app:cardUseCompatPadding="true"
         android:layout_height="wrap_content">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="vertical"
             android:paddingRight="10dp"
             android:paddingLeft="10dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="30dp"
             android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/profileQR_"
+                android:layout_width="80dp"
+                android:layout_height="70dp"
+                android:layout_gravity="center_horizontal"/>
             <TextView
                 android:layout_width="match_parent"
                 android:text="Marco Max Atencio Maravi"
@@ -40,6 +49,7 @@
                 android:text="Usa tu código QR para recoger tu pedido"
                 />
             <ImageView
+                android:id="@+id/qr_"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
